--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -27,10 +27,9 @@
       "\n",
       "\n",
       "====== WebDriver manager ======\n",
-      "Current google-chrome version is 99.0.4844\n",
-      "Get LATEST chromedriver version for 99.0.4844 google-chrome\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/99.0.4844.51/chromedriver_win32.zip\n",
-      "Driver has been saved in cache [C:\\Users\\jtaul\\.wdm\\drivers\\chromedriver\\win32\\99.0.4844.51]\n"
+      "Current google-chrome version is 101.0.4951\n",
+      "Get LATEST chromedriver version for 101.0.4951 google-chrome\n",
+      "Driver [C:\\Users\\jtaul\\.wdm\\drivers\\chromedriver\\win32\\101.0.4951.41\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -85,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">Three New Views of Mars' Moon Phobos</div>"
+       "<div class=\"content_title\">Robotic Toolkit Added to NASA's Mars 2020 Rover</div>"
       ]
      },
      "execution_count": 5,
@@ -106,7 +105,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Three New Views of Mars' Moon Phobos\""
+       "\"Robotic Toolkit Added to NASA's Mars 2020 Rover\""
       ]
      },
      "execution_count": 6,
@@ -128,7 +127,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Taken with the infrared camera aboard NASA's Odyssey orbiter, they reveal temperature variations on the small moon as it drifts into and out of Mars’ shadow.\""
+       "\"The bit carousel, which lies at the heart of the rover's Sample Caching System, is now aboard NASA's newest rover. \""
       ]
      },
      "execution_count": 7,
@@ -374,9 +373,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pythondata"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -388,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
